k8s_templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: k8s-demo
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://akskeyvault2264.vault.azure.net/certificates/aks-ingress-tls/6dad76f036fd43ab920b32b2f37f2e28
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - k8s-demo.australiaeast.cloudapp.azure.com
      secretName: keyvault-k8s-demo-ingress
  rules:
    - host: k8s-demo.australiaeast.cloudapp.azure.com
      # - host: 192.168.72.2.nip.io # You can use any domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
